test/Fail/AnonymousRecConstrInline.err
AnonymousRecConstrInline.agda:21.5-9: error: [UnequalTerms]
The terms
  t1
and
  t2
are not equal at type R
when checking that the expression refl has type t1 ≡ t2
